--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@clerk/nextjs": "^5.3.7",
     "@radix-ui/react-slot": "^1.1.0",
+    "@stripe/stripe-js": "^4.4.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
     "@trpc/client": "^11.0.0-rc.446",
@@ -26,13 +27,18 @@
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.0",
     "lucide-react": "^0.436.0",
-    "next": "^14.2.4",
+    "micro": "^10.0.1",
+    "next": "^14.2.7",
+    "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "server-only": "^0.0.1",
+    "sonner": "^1.5.0",
+    "stripe": "^16.9.0",
     "superjson": "^2.2.1",
+    "svix": "^1.31.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.3"
